[FIX] account_followup: fix style on followup partner view
The send button wasn't align with the overdue Invoices above, now he is.

task-4582381

closes odoo/odoo#199172

X-original-commit: 77d4dde2cede10c7e48760a0eba3627a4ee280c3
Related: odoo/enterprise#80108

--- a/addons/web/static/src/views/form/form_controller.scss
+++ b/addons/web/static/src/views/form/form_controller.scss
@@ -165,9 +165,6 @@
             .o_field_many2one_selection {
                 width: 100% !important;
             }
-            .fb-mincontent {
-                flex-basis: min-content !important;
-            }
         }
     }
 
